refactor: Diary의 RESTful 계층적 리소스 명시적으로 엔드포인트 재설정